Message exception handling